# productivity-scripts

./: .gitignore  README.md  calendar-listing.py  list-calendar-events.py  list-calendars.py  meeting_note_themes.prompt.txt  pyproject.toml
.cursor/rules/: work-life-balance.md
tests/: __init__.py  test_auth.py  test_calendar_client.py  test_config.py  test_download_notes.py  test_integration.py  test_smoke.py
wallaby/: __init__.py  auth.py  calendar_client.py  config.py  drive_client.py  gemini_client.py
wallaby/cli/: __init__.py  analyze_themes.py  download_notes.py  list_calendars.py  list_events.py  main.py
