[tool.poetry]
name = "work-life-balance"
version = "0.1.0"
description = ""
authors = ["John Casey <jdcasey@commonjava.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.149.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
